# Solana-Security-Reference-Repository

./: .gitignore  BUILD_AND_RUN.md  Cargo.toml  INDEX.md  QUICK_REFERENCE.md  README.md  SECURITY_PATTERNS.md  WALKTHROUGH.md
programs/cpi_misuse/: Cargo.toml
programs/cpi_misuse/src/: lib.rs  secure.rs  vulnerable.rs
programs/incorrect_authority_check/: Cargo.toml
programs/incorrect_authority_check/src/: secure.rs  vulnerable.rs
programs/missing_account_validation/: Cargo.toml
programs/missing_account_validation/src/: secure.rs  vulnerable.rs
programs/reentrancy_risk/: Cargo.toml
programs/reentrancy_risk/src/: mod.rs  secure.rs  vulnerable.rs
programs/unsafe_arithmetic/: Cargo.toml
programs/unsafe_arithmetic/src/: mod.rs  secure.rs  vulnerable.rs
tests/: integration_tests.rs
