[workspace]
members = [
    "programs/missing_account_validation",
    "programs/incorrect_authority_check",
    "programs/unsafe_arithmetic",
    "programs/cpi_misuse",
    "programs/reentrancy_risk",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug = true
